--- a/package.json
+++ b/package.json
@@ -10,5 +10,8 @@
   "license": "MIT",
   "devDependencies": {
     "serve": "^11.2.0"
+  },
+  "dependencies": {
+    "@tinymce/tinymce-vue": "^3.2.8"
   }
 }
