--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -5,6 +5,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
+      - run: eval `ssh-agent -s`
       - run: echo "${{ secrets.cyon_deployment }}" | tr -d '\r' | ssh-add - > /dev/null
       - run: mkdir -p ~/.ssh
       - run: chmod 700 ~/.ssh
