--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -6,12 +6,12 @@ jobs:
     steps:
     steps:
       - name: Install SSH Key
-         uses: shimataro/ssh-key-action@v2
-         with:
+        uses: shimataro/ssh-key-action@v2
+        with:
             key: ${{ secrets.SSH_KEY }}
             known_hosts: 'placeholder'
       - name: Adding Known Hosts
-        run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
+        - run: ssh-keyscan -H ${{ secrets.SSH_HOST }} >> ~/.ssh/known_hosts
 
       - name: Deployment
         - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
