--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -8,7 +8,7 @@ jobs:
       - name: Install SSH Key
         uses: shimataro/ssh-key-action@v2
         with:
-          - key: ${{ secrets.SSH_KEY }}
-          - known_hosts: ${{ secrets.SSH_KNOWN_HOST }}
+          key: ${{ secrets.SSH_KEY }}
+          known_hosts: ${{ secrets.SSH_KNOWN_HOST }}
       - name: Deployment
         - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
