--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -4,11 +4,10 @@ jobs:
   Cpoy-Index-To-Cyon:
     runs-on: ubuntu-latest
     steps:
-    steps:
       - name: Install SSH Key
         uses: shimataro/ssh-key-action@v2
         with:
           key: ${{ secrets.SSH_KEY }}
           known_hosts: ${{ secrets.SSH_KNOWN_HOST }}
       - name: Deployment
-        - run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
+        run: echo "🎉 The job was automatically triggered by a ${{ github.event_name }} event."
