--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,4 +13,4 @@ jobs:
         uses: actions/checkout@v3
       - name: Deployment
         run: |
-          ls ${{ github.workspace }}
+          scp ${{ github.workspace }}/index.html veloplus@${{ secrets.SSH_KNOWN_HOST }}/www/helper.veloplus.ch/public/index.html
