--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,4 +13,4 @@ jobs:
         uses: actions/checkout@v3
       - name: Deployment
         run: |
-          scp ${{ github.workspace }}/index.html veloplus@${{ secrets.SSH_HOST }}/www/helper.veloplus.ch/public/index.html
+          scp ${{ github.workspace }}/index.html veloplus@${{ secrets.SSH_HOST }}:~/www/helper.veloplus.ch/public/index.html
