chore: code cleanup
- separate tinymce config
- separate css stylesheet

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -17,3 +17,5 @@ jobs:
       - name: Deployment
         run: |
           scp ${{ github.workspace }}/index.html veloplus@${{ secrets.SSH_HOST }}:~/www/helper.veloplus.ch/public/index.html
+          scp ${{ github.workspace }}/tinymce_config.json veloplus@${{ secrets.SSH_HOST }}:~/www/helper.veloplus.ch/public/tinymce_config.json
+                    scp ${{ github.workspace }}/main.css veloplus@${{ secrets.SSH_HOST }}:~/www/helper.veloplus.ch/public/main.css
