--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -16,7 +16,7 @@ jobs:
         uses: actions/checkout@v3
       - name: Deployment
         run: |
-          scp ${{ github.workspace }}/index.html veloplus@${{ secrets.SSH_HOST }}:~/www/helper.veloplus.ch/public/index.html
-          scp ${{ github.workspace }}/tinymce_config.json veloplus@${{ secrets.SSH_HOST }}:~/www/helper.veloplus.ch/public/tinymce_config.json
-          scp ${{ github.workspace }}/templates.json veloplus@${{ secrets.SSH_HOST }}:~/www/helper.veloplus.ch/public/templates.json
-          scp ${{ github.workspace }}/main.css veloplus@${{ secrets.SSH_HOST }}:~/www/helper.veloplus.ch/public/main.css
+          scp ${{ github.workspace }}/index.html veloplus@${{ secrets.SSH_HOST }}:~/www/helper.veloplus.ch/public/marketingtext/index.html
+          scp ${{ github.workspace }}/tinymce_config.json veloplus@${{ secrets.SSH_HOST }}:~/www/helper.veloplus.ch/public/marketingtext/tinymce_config.json
+          scp ${{ github.workspace }}/templates.json veloplus@${{ secrets.SSH_HOST }}:~/www/helper.veloplus.ch/public/marketingtext/templates.json
+          scp ${{ github.workspace }}/main.css veloplus@${{ secrets.SSH_HOST }}:~/www/helper.veloplus.ch/public/marketingtext/main.css
