--- a/tinymce_config.json
+++ b/tinymce_config.json
@@ -1,16 +1,8 @@
 {
-  "header": {
-    "menubar": false,
-    "toolbar": false,
-    "browser_spellcheck": true,
-    "inline": true,
-    "forced_root_blocks": false,
-    "valid_elements": "h2,h3"
-  },
   "standard": {
-    "plugins": "lists paste textpattern code link",
+    "plugins": "lists paste textpattern code link table",
     "menubar": false,
-    "toolbar": "undo redo | bold italic | bullist numlist | link | removeformat",
+    "toolbar": "code | undo redo | bold italic | bullist numlist | link | removeformat | table | formatselect ",
     "browser_spellcheck": true,
     "inline": true,
     "paste_auto_cleanup_on_paste": true,
@@ -18,23 +10,7 @@
     "paste_remove_styles_if_webkit": true,
     "paste_strip_class_attributes": true,
     "block_formats": "Paragraph=p;Heading 2=h2;Heading 3=h3;",
-    "textpattern_patterns": [
-      { "start": "1. ", "cmd": "InsertOrderedList" },
-      { "start": "* ", "cmd": "InsertUnorderedList" },
-      { "start": "- ", "cmd": "InsertUnorderedList" }
-    ]
-  },
-  "freestyle": {
-    "plugins": "lists paste textpattern code link",
-    "menubar": false,
-    "toolbar": "code | undo redo | bold italic | bullist numlist | link | removeformat | formatselect ",
-    "browser_spellcheck": true,
-    "inline": true,
-    "paste_auto_cleanup_on_paste": true,
-    "paste_remove_styles": true,
-    "paste_remove_styles_if_webkit": true,
-    "paste_strip_class_attributes": true,
-    "block_formats": "Paragraph=p;Heading 2=h2;Heading 3=h3;",
+    "content_style": ".mce-content-body { padding-left: 10px }",
     "textpattern_patterns": [
       { "start": "1. ", "cmd": "InsertOrderedList" },
       { "start": "* ", "cmd": "InsertUnorderedList" },
